--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,9 +1,9 @@
 name: Generate Snake Animation
 
 on:
+  workflow_dispatch  # Allows manual triggering
   schedule:
     - cron: "0 0 * * *"  # Runs daily at midnight UTC
-  workflow_dispatch:
 
 jobs:
   build:
@@ -12,16 +12,24 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Generate contribution grid snake
+      - name: Generate snake game from GitHub contributions
         uses: Platane/snk@v3
         with:
-          hafsamaryam08: YOUR_GITHUB_USERNAME
+          hafsamaryam08: ${{ github.repository_owner }}
           outputs: |
-            github-contribution-grid-snake.svg
-            github-contribution-grid-snake-dark.svg?palette=github-dark
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
-      - name: Push the output
+      - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
-          name: snake-animation
-          path: github-contribution-grid-snake.svg
+          name: snake-artifact
+          path: dist
+
+      - name: Push snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
