--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -15,16 +15,15 @@ jobs:
       - name: Generate snake game from GitHub contributions
         uses: Platane/snk@v3
         with:
-          hafsamaryam08: ${{ github.hafsamaryam08 }}
-          outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+          github_user_name: hafsamaryam08  # Corrected username input
+          output: dist/github-contribution-grid-snake.svg  # Corrected output path
+          output_format: svg  # Ensures SVG format is used
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: snake-artifact
-          path: dist
+          path: dist/github-contribution-grid-snake.svg
 
       - name: Push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3
@@ -32,4 +31,4 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Ensure this secret is set
