--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,7 +1,7 @@
 name: Generate Snake Animation
 
 on:
-  workflow_dispatch  # Allows manual triggering
+  workflow_dispatch:  # Allows manual triggering
   schedule:
     - cron: "0 0 * * *"  # Runs daily at midnight UTC
 
