--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,34 +1,28 @@
-name: Generate Snake Animation
+
+name: Generate snake game
 
 on:
-  workflow_dispatch:  # Allows manual triggering
-  schedule:
-    - cron: "0 0 * * *"  # Runs daily at midnight UTC
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
+  workflow_dispatch:
 
 jobs:
   build:
+    name: Jobs to update datas
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Generate snake game from GitHub contributions
-        uses: Platane/snk@v3
+      # Snake Animation
+      - uses: Sutil/snk@master
+        id: snake-gif
         with:
-          github_user_name: hafsamaryam08  # Corrected username input
-          output: dist/github-contribution-grid-snake.svg  # Corrected output path
-          output_format: svg  # Ensures SVG format is used
+          github_user_name: 'hafsamaryam08'
+          svg_out_path: dist/github-contribution-grid-snake2.svg
+          snake_color: 'blue'
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: snake-artifact
-          path: dist/github-contribution-grid-snake.svg
-
-      - name: Push snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Ensure this secret is set
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
